# gcp-rag-eval-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluation/: run_offline_evaluation.py  run_unit_tests.py  testset_generation.py
infra/: .terraform.lock.hcl  api.tf  app.tf  build_image.tpl  main.tf  provider.tf  search.tf  variables.tf
local/: run_api.py  run_streamlit.py
src/api/: Dockerfile  pyproject.toml
src/api/f_api/: api.py  clients.py  config.py
src/api/f_api/utils/: chat.py  documents.py  embeddings.py  prompts.py  ragas.py  search.py
src/app/: Dockerfile  pyproject.toml
src/app/f_app/: Home.py  config.py
src/app/f_app/pages/: 1_Knowledge_Base.py  2_Semantic_Search.py
